--- a/tabuada.html
+++ b/tabuada.html
@@ -18,7 +18,7 @@
         function gerarTabuada() {
             const numeroInput = document.getElementById("numero");
             const resultadoDiv = document.getElementById("resultado");
-            const num = parseFloat(numeroInput.Valeu);
+            const num = parseFloat(numeroInput.Value);
 
             // Limpa o conteúdo anterior
             resultadoDiv.innerHTML = "";
