--- a/tabuada.html
+++ b/tabuada.html
@@ -31,7 +31,7 @@
 
             // Gera a tabuada de 1 a 10
             for (let i = 1; i <= 10; i++) {
-                resultadoDiv.innerHTML += '<p>${num} x ${i} = ${num * i}</p>';
+                resultadoDiv.innerHTML += `<p>${num} x ${i} = ${num * i}</p>`;
             }
         }
     </script>
